something about hehe

--- a/JMC/健美操开场视频规划.md
+++ b/JMC/健美操开场视频规划.md
@@ -12,6 +12,15 @@
 - 况收尾，模仿1M的红唇姐一个hip-pop视频的,从镜头下方进入镜头，远离镜头，其他人从镜头两边逐波进入镜头
 - 每个歌词进行一些团体街舞，但突出'i am chinese'的主题
 - 最后一句歌词时，况跪膝前滑，滑至镜头前，掏出统院院旗或者其他的标志性物品，朝镜头展示，结束
+## detail for cooperate part
+- back 1 + 4(diao + liu hanwen + chen + wangrongzhen + mosinan)
+- dou 1 + (two_girl)
+- forward( )
+- a dance
+- dance 2
+- more
+- more
+- more
 ## 时间表
 - 11.6 晚上训练前后将个人展示部分拍完
 - 11.10 团体视频
