long time no see

--- a/regression/regression_w12_hw.ipynb
+++ b/regression/regression_w12_hw.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "from auto_relation_test import multiple_linear_regression\n",
     "df_1 = pd.read_excel('table9-16.xlsx')\n",
-    "df_2 = pd.read_excel('table9-17.xlsx')\n"
+    "df_2 = pd.read_excel('table9-17.xlsx')"
    ]
   },
   {
