--- a/life/work_tool_build.ipynb
+++ b/life/work_tool_build.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,17 +142,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
+    "import pickle\n",
     "pd.DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -178,16 +190,16 @@
       "\n",
       "----mission info-----\n",
       "\n",
-      "id:56|tag:study\n",
+      "id:61|tag:work\n",
       "\n",
-      "ddl:2019-12-2|importance:3\n",
+      "ddl:2019-12-3|importance:3\n",
       "\n",
       "root:-1\n",
       "\n",
-      "name:regression\n",
+      "name:picture\n",
       "\n",
       "content:\n",
-      "list sub-task\n",
+      "review on whole PPT\n",
       "\n",
       "---------------------\n",
       "\n",
@@ -196,7 +208,7 @@
     }
    ],
    "source": [
-    "type_ = 'study'\n",
+    "type_ = 'work'\n",
     "manager.to_do(type_,'unsure')"
    ]
   },
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -219,16 +231,16 @@
       "\n",
       "----mission info-----\n",
       "\n",
-      "id:17|tag:work\n",
+      "id:61|tag:work\n",
       "\n",
-      "ddl:2019-11-25|importance:3\n",
+      "ddl:2019-12-3|importance:3\n",
       "\n",
       "root:-1\n",
       "\n",
-      "name:BigChuang\n",
+      "name:picture\n",
       "\n",
       "content:\n",
-      "do not sleep and finish what i could.\n",
+      "review on whole PPT\n",
       "\n",
       "---------------------\n",
       "\n",
@@ -257,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "dic = {\n",
     "    'root':-1,\n",
-    "    'tag':'research',\n",
-    "    'name':'change the attention',\n",
+    "    'tag':'work',\n",
+    "    'name':'mechine learning',\n",
     "    'importance':3,\n",
-    "    'content':'test on the notebook use import',\n",
+    "    'content':'review on whole PPT',\n",
     "    'ddl':'2019-12-3',\n",
     "}\n",
     "manager.get_mission(**dic)"
@@ -288,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -298,16 +310,50 @@
       "\n",
       "----mission info-----\n",
       "\n",
-      "id:59|tag:research\n",
+      "id:61|tag:work\n",
       "\n",
       "ddl:2019-12-3|importance:3\n",
       "\n",
       "root:-1\n",
       "\n",
-      "name:change the attention\n",
+      "name:picture\n",
       "\n",
       "content:\n",
-      "test on the notebook use import\n",
+      "review on whole PPT\n",
+      "\n",
+      "---------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "----mission info-----\n",
+      "\n",
+      "id:60|tag:work\n",
+      "\n",
+      "ddl:2019-12-3|importance:3\n",
+      "\n",
+      "root:-1\n",
+      "\n",
+      "name:mechine learning\n",
+      "\n",
+      "content:\n",
+      "review on whole PPT\n",
+      "\n",
+      "---------------------\n",
+      "\n",
+      "\n",
+      "\n",
+      "----mission info-----\n",
+      "\n",
+      "id:56|tag:work\n",
+      "\n",
+      "ddl:2019-12-3|importance:3\n",
+      "\n",
+      "root:-1\n",
+      "\n",
+      "name:regression hw\n",
+      "\n",
+      "content:\n",
+      "have a review\n",
       "\n",
       "---------------------\n",
       "\n",
@@ -316,7 +362,7 @@
     }
    ],
    "source": [
-    "type_ = 'research'\n",
+    "type_ = 'work'\n",
     "manager.show_to_do_list(type_)"
    ]
   },
@@ -376,7 +422,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
     "with open('tmp.pk','wb') as f:\n",
     "    pickle.dump(manager,f)"
    ]
@@ -397,9 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-fd8e7be670da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tmp.pk'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mmanager\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmanager\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_do\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'study'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'unsure'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-d90b99edac75>\u001b[0m in \u001b[0;36mto_do\u001b[0;34m(self, tag, how, *args)\u001b[0m\n\u001b[1;32m     58\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwork_flow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'unsure'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow_to_do\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'sub'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m             \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwork_flow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-d90b99edac75>\u001b[0m in \u001b[0;36mshow_to_do\u001b[0;34m(self, tag)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mshow_to_do\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwork_flow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mto_do\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtag\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhow\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mhow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'sub'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'sure'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'unsure'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "with open('tmp.pk','rb') as f:\n",
     "    manager = pickle.load(f)\n",
